--- a/site/shop/shop-styles.css
+++ b/site/shop/shop-styles.css
@@ -37,7 +37,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden
+  overflow: hidden;
 }
 
 .img-container img {
