--- a/site/styles.css
+++ b/site/styles.css
@@ -69,14 +69,19 @@ img.logo {
   border-radius: 30px;
   width: 153px;
   height: 48px;
+  transition: background-color 0.3s, box-shadow 0.5s ease-in-out;
 }
 
 .button:hover {
-  background: #FF3333;
-  box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
-  width: 153px;
-  height: 48px;
+  background: #FF5252;
+  box-shadow: 1px 3px 15px rgba(0, 0, 0, 0.3);
+}
+
+
+.button:active {
+  background: #EE2E2E;
+  /* background: #512eee; */
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
 
