--- a/site/thanks/thanks-style.css
+++ b/site/thanks/thanks-style.css
@@ -16,14 +16,87 @@ p {
   color: rgba(0, 0, 0, 0.35);
 }
 
-img {
+/* img {
   height: 119px;
   width: 636px;
-}
+} */
 
 div {
-  margin-top: calc(50% - 400px);
+  /* margin-top: calc(50% - 400px); */
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+
 }
+
+body {
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  
+  display: flex; /* добавил из видео */
+  flex-direction: column; /* добавил из видео */
+
+  /* justify-content: center; centers items on the line (the x-axis by default) 
+  /* align-items: center;  centers items on the cross-axis (y by default) */
+}
+
+.content {
+  flex-grow: 1;
+}
+
+.footer {
+  background: #D9D9D9;
+  height: 88px;
+}
+
+.footer p {
+
+  /* 8-800-23-11-777(с 08:00 до 22:00) */
+  
+  font-family: 'Bahnschrift';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+    
+  /* identical to box height */
+  /* text-decoration-line: underline; */
+  
+  color: #929292;
+}
+
+
+
+/* Rectangle 20
+
+position: absolute;
+width: 1446px;
+height: 88px;
+left: 0px;
+top: 902px;
+
+background: #D9D9D9;
+
+/* 8-800-23-11-777(с 08:00 до 22:00) */
+
+/* position: absolute;
+width: 213px;
+height: 17px;
+left: 620px;
+top: 947px;
+
+font-family: 'Bahnschrift';
+font-style: normal;
+font-weight: 300;
+font-size: 14px;
+line-height: 17px; */
+/* identical to box height */
+/* text-decoration-line: underline; */
+
+/* color: #929292; */
+
+
+
