--- a/site/thanks/thanks-style.css
+++ b/site/thanks/thanks-style.css
@@ -5,6 +5,8 @@ h1 {
   font-size: 34px;
   line-height: 41px;
   color: #000000;
+
+  margin: 0; /* пытался приблизить к макету, для себя не понял, как лучше, с этим свойством, или без */
 }
 
 p {
@@ -14,6 +16,8 @@ p {
   font-size: 23px;
   line-height: 28px;
   color: rgba(0, 0, 0, 0.35);
+
+  margin: 0; /* пытался приблизить к макету, для себя не понял, как лучше, с этим свойством, или без */
 }
 
 /* img {
@@ -36,9 +40,8 @@ body {
   width: 100%;
   height: 100%;
   
-  display: flex; /* добавил из видео */
-  flex-direction: column; /* добавил из видео */
-
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
@@ -53,7 +56,8 @@ body {
 .footer p {
 
   /* 8-800-23-11-777(с 08:00 до 22:00) */
-  
+  margin-top: 0.5em; /* приблизил к макету, как смог) */
+  margin-bottom: 0.5em; /* приблизил к макету, как смог) */
   font-family: 'Bahnschrift';
   font-style: normal;
   font-weight: 300;
