add button - to > shop

--- a/site/thanks/thanks-style.css
+++ b/site/thanks/thanks-style.css
@@ -17,7 +17,7 @@ p {
   line-height: 28px;
   color: rgba(0, 0, 0, 0.35);
 
-  margin: 0; /* пытался приблизить к макету, для себя не понял, как лучше, с этим свойством, или без */
+  /* margin: 0;  пытался приблизить к макету, для себя не понял, как лучше, с этим свойством, или без */
 }
 
 /* img {
