--- a/site/styles.css
+++ b/site/styles.css
@@ -30,11 +30,17 @@ h2 {
 }
 
 .frame {
-  position: relative;
+  /* position: relative; */
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+
   width: 1065px;
   height: 672px;
   left: calc(50% - 1065px/2);
-  top: 50px;
+  /* top: 50px; */
+  top: calc(50% - 672px/2); /* сделал по центу экрана */
 
   background: #FFFFFF;
   box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.1);
@@ -143,3 +149,4 @@ img.logo {
   position: relative;
   left: calc(50% - 900px/2);
 }
+
