--- a/site/cart/cart-card-styles.css
+++ b/site/cart/cart-card-styles.css
@@ -151,11 +151,10 @@
     justify-content: center;
 }
 
-.cart-side-bar {
-    flex-direction: column;
-    align-items: start;
-    /* border: solid; */
-}
+    /* .cart-side-bar {
+        flex-direction: column;
+        align-items: start;
+    } */
 
 
 .cart-list-container {
@@ -190,15 +189,13 @@ nav {
     max-width: 1350px;
 }
 
-.title {
+/* .title {
     justify-self: start;
     font-family: Bahnschrift;
     font-size: 34px;
     font-weight: 600;
-    /* line-height: 41px; */
     letter-spacing: 0em;
     text-align: left;
     margin: 0;
     flex-grow: 1;
-    /* text-align: center; */
-}
+} */
