--- a/site/thanks/thanks-style.css
+++ b/site/thanks/thanks-style.css
@@ -36,12 +36,12 @@ div {
 
 body {
   margin: 0;
-  
+
   overflow: hidden;
   position: absolute;
   width: 100%;
   height: 100%;
-  
+
   display: flex;
   flex-direction: column;
 }
@@ -50,10 +50,10 @@ body {
   flex-grow: 1;
 }
 
-.footer {
+/* .footer {
   background: #D9D9D9;
   height: 88px;
-}
+} */
 
 .footer p {
 
@@ -65,10 +65,10 @@ body {
   font-weight: 300;
   font-size: 14px;
   line-height: 17px;
-    
+
   /* identical to box height */
   /* text-decoration-line: underline; */
-  
+
   color: #929292;
 }
 
