--- a/site/styles.css
+++ b/site/styles.css
@@ -340,3 +340,14 @@ svg .fuse-line {
   background: #D9D9D9;
   height: 88px;
 }
+
+.product-type-filter {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+
+.product-type-filter .active {
+  border-width: 1px;
+  border-style: solid;
+}
