--- a/site/styles.css
+++ b/site/styles.css
@@ -31,8 +31,8 @@ h2 {
 
 .title-screen {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  /* left: 50%;
+  top: 50%; */
 
   width: 1065px;
   height: 672px;
