--- a/site/styles.css
+++ b/site/styles.css
@@ -304,7 +304,7 @@ svg .fuse-line {
   letter-spacing: 0em;
   text-align: left;
   margin: 0;
-  flex-grow: 1;
+  /* flex-grow: 1; */
   /* text-align: center; */
 }
 
@@ -329,6 +329,10 @@ svg .fuse-line {
   margin: 50px;
 }
 
+.nav-width {
+  width: 590px;
+}
+
 .user-info p {
   color: #B4B4B4;
   font-size: 22px;
@@ -339,6 +343,12 @@ svg .fuse-line {
 .footer {
   background: #D9D9D9;
   height: 88px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 .footer p {
@@ -362,7 +372,7 @@ svg .fuse-line {
   flex-grow: 1;
 }
 
-body {
+.account-body {
   margin: 0;
 
   overflow: hidden;
@@ -372,4 +382,8 @@ body {
 
   display: flex;
   flex-direction: column;
+}
+
+.justify-content-center {
+  justify-content: center;
 }
