--- a/site/authorization/auth-styles.css
+++ b/site/authorization/auth-styles.css
@@ -1,18 +1,155 @@
+:root {
+    --form-witdh: 500px
+}
+
 body {
-    height: 100%;
-}
-
-.auth-container {
+    /* margin: 0;
+    padding: 0; */
+    /* background-color: antiquewhite; */
+    height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
-    min-height: 80vh;
-    background-color: beige;
+    justify-content: center;
 }
 
-.auth-block {
-    background-color: blanchedalmond;
-    border-radius: 10px;
-    margin: 5vh;
-    padding: 5vh;
+.ui-container {
+    display: flex;
+    width: var(--form-witdh);
+    flex-wrap: wrap;
+}
+
+.forms-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: var(--form-witdh);
+
+
+    background: #FFFFFF;
+    box-shadow: 3px -5px 10px rgba(0, 0, 0, 0.25);
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    z-index: 100;
+}
+
+.login-form,
+.registration-form {
+    margin: 50px;
+    margin-bottom: 25px;
+    width: 80%;
+    display: none;
+    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.login-tab,
+.registration-tab {
+    position: relative;
+    top: -10px;
+    margin: 0;
+    box-sizing: border-box;
+    /* border: 1px solid black;
+    border-top: none; */
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    width: 50%;
+    /* height: 50px; */
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 50px;
+    /* identical to box height */
+    text-align: center;
+    position: relative;
+    background-color: rgb(202, 202, 202);
+    filter: drop-shadow(3px -5px 10px rgba(0, 0, 0, 0.25));
+    user-select: none;
+    cursor: pointer;
+    /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); */
+
+}
+
+.login-tab {
+    z-index: 20;
+}
+
+.registration-tab {
+    /* box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.75); */
+    z-index: 20;
+}
+
+.forms-container .active {
+    display: flex;
+}
+
+.ui-container>.active {
+    top: 0;
+    z-index: 50;
+    background-color: rgb(255, 255, 255);
+}
+
+.forms-container input {
+    /* Rectangle 19 */
+
+    /* position: absolute; */
+    width: 90%;
+    height: 36px;
+    /* left: calc(50% - 286px/2 + 0.08px); */
+    /* top: 425px; */
+
+    background: #FFFFFF;
+    box-shadow: inset 2px 6px 30px rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+    border: none;
+
+    font-family: 'Bahnschrift';
+    /* font-style: normal; */
+    font-weight: 500;
+    font-size: 25px;
+
+    letter-spacing: 0.05em;
+    /* identical to box height */
+    text-align: center;
+    color: #3d3d3d;
+
+}
+
+input {
+    font-size: 28px;
+    text-align: center;
+}
+
+.forms-container label {
+    margin-top: 10px;
+    /* E-mail */
+
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 25px;
+    line-height: 18px;
+    letter-spacing: 0.1em;
+    /* identical to box height */
+
+    color: #797979;
+}
+
+.hidden {
+    display: none;
+}
+
+#login-error-text,
+#registration-error-text {
+    color: red;
+    font-weight: 700;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    margin: 5px;
+    font-size: 25px;
+    line-height: 18px;
+    text-align: center;
 }
