--- a/site/thanks/thanks-style.css
+++ b/site/thanks/thanks-style.css
@@ -6,7 +6,8 @@ h1 {
   line-height: 41px;
   color: #000000;
 
-  margin: 0; /* пытался приблизить к макету, для себя не понял, как лучше, с этим свойством, или без */
+  margin: 0;
+  /* пытался приблизить к макету, для себя не понял, как лучше, с этим свойством, или без */
 }
 
 p {
@@ -54,25 +55,3 @@ body {
   background: #D9D9D9;
   height: 88px;
 } */
-
-.footer p {
-
-  /* 8-800-23-11-777(с 08:00 до 22:00) */
-  margin-top: 0.5em; /* приблизил к макету, как смог) */
-  margin-bottom: 0.5em; /* приблизил к макету, как смог) */
-  font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 17px;
-
-  /* identical to box height */
-  /* text-decoration-line: underline; */
-
-  color: #929292;
-}
-
-
-
-
-
