--- a/site/shop/shop-styles.css
+++ b/site/shop/shop-styles.css
@@ -3,7 +3,7 @@ p {
 }
 
 .shop-main-navbar {
-  background-color: burlywood;
+  /* background-color: burlywood; */
   display: flex;
   padding: 10px 25%;
   justify-content: end;
@@ -16,4 +16,53 @@ p {
 
 p {
   color: black;
+}
+
+body {
+  /* padding: 0; */
+  margin: 0px;
+}
+
+.shop-main {
+  padding-top: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+.shop-header {
+  padding-top: 10px;
+  background-color: white;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
+
+.shop-sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  flex-grow: 1;
+  padding: 10px 20px 20vw 10px;
+  /* flex-shrink: 1; */
+}
+
+.product-brand-filter {
+  padding: 20px;
+  min-width: 100px;
+
+
+}
+
+.product-list-container {
+  /* background-color: beige; */
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  flex-grow: 1;
+  gap: 20px;
+  padding: 10px 20px 20vw 10px;
+  /* flex-grow: 1;
+  flex-shrink: 5; */
+
+  /* justify-content: flex-start; */
 }
