fixed line endings

--- a/site/styles.css
+++ b/site/styles.css
@@ -348,14 +348,16 @@ svg .fuse-line {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+
 }
 
 .footer p {
 
   /* 8-800-23-11-777(с 08:00 до 22:00) */
-  margin-top: 0.5em; /* приблизил к макету, как смог) */
-  margin-bottom: 0.5em; /* приблизил к макету, как смог) */
+  margin-top: 0.5em;
+  /* приблизил к макету, как смог) */
+  margin-bottom: 0.5em;
+  /* приблизил к макету, как смог) */
   font-family: 'Bahnschrift';
   font-style: normal;
   font-weight: 300;
