--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -1,433 +1,419 @@
-p {}
-
-a {
-  text-decoration: none;
+p {
 }
 
+a {
+    text-decoration: none;
+}
 
 h1 {
-  text-align: center;
-  Font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 38px;
-  line-height: 46px;
-  /* identical to box height */
+    text-align: center;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 38px;
+    line-height: 46px;
+    /* identical to box height */
 
-  text-align: center;
-  color: #000000;
+    text-align: center;
+    color: #000000;
 }
 
 h2 {
-  font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 27px;
-  line-height: 32px;
-  text-align: center;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 27px;
+    line-height: 32px;
+    text-align: center;
 
-  color: #000000;
+    color: #000000;
 }
 
 .title-screen {
-  position: absolute;
-  /* left: 50%;
+    position: absolute;
+    /* left: 50%;
   top: 50%; */
 
-  width: 1065px;
-  height: 672px;
-  left: calc(50% - 1065px/2);
-  /* top: 50px; */
-  top: calc(50% - 672px/2);
-  /*сделал по центу экрана */
+    width: 1065px;
+    height: 672px;
+    left: calc(50% - 1065px / 2);
+    /* top: 50px; */
+    top: calc(50% - 672px / 2);
+    /*сделал по центу экрана */
 }
 
-
 .frame {
-  background: #FFFFFF;
-  box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
+    background: #ffffff;
+    box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
 }
 
 .flex-container {
-  display: flex;
+    display: flex;
 }
 
-
 img.logo {
-  position: relative;
-  left: calc(50% - 636px/2);
+    position: relative;
+    left: calc(50% - 636px / 2);
 }
 
 .red-plate {
-  width: 900px;
-  height: 176px;
-  background: #FF3333;
-  box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
-  position: relative;
-  left: calc(50% - 900px/2);
+    width: 900px;
+    height: 176px;
+    background: #ff3333;
+    box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    position: relative;
+    left: calc(50% - 900px / 2);
 }
 
 .red-plate div {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  width: 300px;
-  height: 176px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    width: 300px;
+    height: 176px;
 }
 
 /* ----- размеры кнопок ------ */
 .button.medium-size {
-  width: 153px;
-  height: 48px;
+    width: 153px;
+    height: 48px;
 }
 
 .undo-button {
-  position: relative;
-  width: 120;
-  height: 40;
+    position: relative;
+    width: 120;
+    height: 40;
 }
 
 /* Основной стиль кнопки  */
 
 .button {
-  /* background: #FF3333; */
-  box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
+    /* background: #FF3333; */
+    box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
 
-  transition: background-color 0.3s, box-shadow 0.5s ease-in-out;
-  text-align: center;
-  cursor: pointer;
+    transition: background-color 0.3s, box-shadow 0.5s ease-in-out;
+    text-align: center;
+    cursor: pointer;
 }
 
 .button:hover {
-  /* background: #FF5252; */
-  box-shadow: 1px 3px 15px rgba(0, 0, 0, 0.3);
+    /* background: #FF5252; */
+    box-shadow: 1px 3px 15px rgba(0, 0, 0, 0.3);
 
-  font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 48px;
-  text-align: center;
-  /* color: #FFFFFF; */
-
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 48px;
+    text-align: center;
+    /* color: #FFFFFF; */
 }
 
 .button:active {
-  /* background: #EE2E2E; */
-  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.3);
+    /* background: #EE2E2E; */
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
-
 .stat {
-  font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 63px;
-  text-align: center;
-  margin: 30px 0 0 0;
-  color: #FFFFFF;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 63px;
+    text-align: center;
+    margin: 30px 0 0 0;
+    color: #ffffff;
 }
 
 .stat-text {
-  font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 23px;
-  line-height: 28px;
-  text-align: center;
-  margin: 0;
-  color: #FFFFFF;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 23px;
+    line-height: 28px;
+    text-align: center;
+    margin: 0;
+    color: #ffffff;
 }
 
 .logo-container {
-  text-align: center;
-  margin: 0px;
-  padding: 0px;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
 }
 
 svg.logo {
-  transition: filter 1s;
-  filter: drop-shadow(2px 3px 5px rgb(0 0 0 / 0.0));
-  margin: 0px;
-  padding: 0px;
+    transition: filter 1s;
+    filter: drop-shadow(2px 3px 5px rgb(0 0 0 / 0));
+    margin: 0px;
+    padding: 0px;
 }
 
 svg.logo:hover {
-  transition: filter 1s;
-  filter: drop-shadow(2px 3px 5px rgb(0 0 0 / 0.8));
+    transition: filter 1s;
+    filter: drop-shadow(2px 3px 5px rgb(0 0 0 / 0.8));
 }
 
 .button-text {
-  text-align: center;
-  display: block;
-  font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 48px;
-  /* identical to box height */
-  text-align: center;
-  color: #FFFFFF;
-  align-self: center;
-  cursor: pointer;
-  user-select: none;
+    text-align: center;
+    display: block;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 48px;
+    /* identical to box height */
+    text-align: center;
+    color: #ffffff;
+    align-self: center;
+    cursor: pointer;
+    user-select: none;
 }
 
 .button-container {
-  margin-top: 100px;
-  width: 900px;
-  justify-content: space-around;
-  position: relative;
-  left: calc(50% - 900px/2);
+    margin-top: 100px;
+    width: 900px;
+    justify-content: space-around;
+    position: relative;
+    left: calc(50% - 900px / 2);
 }
 
-
 .flex-vertical {
-  flex-direction: column;
+    flex-direction: column;
 }
 
 .flex-align-center {
-  align-items: center;
+    align-items: center;
 }
 
 .small-button {
-  background: #FFFFFF;
-  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
-  width: 40px;
-  height: 40px;
-  transition: background-color 0.2s, box-shadow 0.3s ease-in-out;
-  text-align: center;
-  cursor: pointer;
+    background: #ffffff;
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    width: 40px;
+    height: 40px;
+    transition: background-color 0.2s, box-shadow 0.3s ease-in-out;
+    text-align: center;
+    cursor: pointer;
 }
 
 .small-button:hover {
-  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.4);
 }
 
 .small-button:active {
-  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
 .small-button-text {
-  text-align: center;
-  display: block;
-  font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 40px;
-  /* identical to box height */
-  text-align: center;
-  align-self: center;
-  cursor: pointer;
-  user-select: none;
+    text-align: center;
+    display: block;
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 40px;
+    /* identical to box height */
+    text-align: center;
+    align-self: center;
+    cursor: pointer;
+    user-select: none;
 }
 
 .button.white .small-button-text {
-  color: #000000;
+    color: #000000;
 }
 
 .button.red .small-button-text {
-  color: #FFFFFF;
+    color: #ffffff;
 }
 
 .button.red {
-  background: #FF3333;
+    background: #ff3333;
 }
 
 .button.red:hover {
-  background: #FF5252;
+    background: #ff5252;
 }
 
 .button.red:active {
-  background: #EE2E2E;
+    background: #ee2e2e;
 }
 
 .button.white {
-  background: #FFFFFF;
+    background: #ffffff;
 }
 
 .button.white:hover {
-  background: #E2E2E2;
+    background: #e2e2e2;
 }
 
 .button.white:active {
-
-  background: #E2E2E2;
+    background: #e2e2e2;
 }
 
 .white .button-text {
-  color: black;
+    color: black;
 }
 
 /* ----- эксперимент */
 svg.countdown {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 120px;
-  height: 40px;
-  overflow: visible;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 120px;
+    height: 40px;
+    overflow: visible;
 }
 
 svg .fuse-line {
-
-  stroke-dasharray: 285px;
-  stroke-dashoffset: 0px;
-  stroke-linecap: round;
-  stroke-width: 4px;
-  stroke: red;
-  fill: none;
-  animation: countdown 5s linear infinite forwards;
+    stroke-dasharray: 285px;
+    stroke-dashoffset: 0px;
+    stroke-linecap: round;
+    stroke-width: 4px;
+    stroke: red;
+    fill: none;
+    animation: countdown 5s linear infinite forwards;
 }
 
 @keyframes countdown {
-  from {
-    stroke-dashoffset: 0px;
-  }
+    from {
+        stroke-dashoffset: 0px;
+    }
 
-  to {
-    stroke-dashoffset: -285px;
-  }
+    to {
+        stroke-dashoffset: -285px;
+    }
 }
 
 .title {
-  justify-self: start;
-  font-family: Bahnschrift;
-  font-size: 34px;
-  font-weight: 600;
-  /* line-height: 41px; */
-  letter-spacing: 0em;
-  text-align: left;
-  margin: 0;
-  /* flex-grow: 1; */
-  /* text-align: center; */
+    justify-self: start;
+    font-family: Bahnschrift;
+    font-size: 34px;
+    font-weight: 600;
+    /* line-height: 41px; */
+    letter-spacing: 0em;
+    text-align: left;
+    margin: 0;
+    /* flex-grow: 1; */
+    /* text-align: center; */
 }
 
 .cart-side-bar {
-  flex-direction: column;
-  align-items: start;
+    flex-direction: column;
+    align-items: start;
 }
 
 .frame-inset {
-  border-radius: 30px;
-  background: #FFF;
-  box-shadow: 2px 6px 30px 0px rgba(0, 0, 0, 0.10) inset;
+    border-radius: 30px;
+    background: #fff;
+    box-shadow: 2px 6px 30px 0px rgba(0, 0, 0, 0.1) inset;
 }
 
 .frame-inset p {
-  text-align: center;
-  margin-top: 10px;
+    text-align: center;
+    margin-top: 10px;
 }
 
 .user-info {
-  width: 491px;
-  margin: 50px;
+    width: 491px;
+    margin: 50px;
 }
 
 .nav-width {
-  width: 590px;
+    width: 590px;
 }
 
 .user-info p {
-  color: #B4B4B4;
-  font-size: 22px;
-  font-family: Bahnschrift;
-  height: 36px;
+    color: #b4b4b4;
+    font-size: 22px;
+    font-family: Bahnschrift;
+    height: 36px;
 }
 
 .footer {
-  background: #D9D9D9;
-  height: 88px;
+    background: #d9d9d9;
+    height: 88px;
 
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .product-type-filter {
-  display: flex;
-  gap: 30px;
-  justify-content: center;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
 }
 
 .product-type-filter .active {
-  border-width: 1px;
-  border-style: solid;
-
+    border-width: 1px;
+    border-style: solid;
 }
 
 .footer p {
+    /* 8-800-23-11-777(с 08:00 до 22:00) */
+    margin-top: 0.5em;
+    /* приблизил к макету, как смог) */
+    margin-bottom: 0.5em;
+    /* приблизил к макету, как смог) */
+    font-family: 'Bahnschrift';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
 
-  /* 8-800-23-11-777(с 08:00 до 22:00) */
-  margin-top: 0.5em;
-  /* приблизил к макету, как смог) */
-  margin-bottom: 0.5em;
-  /* приблизил к макету, как смог) */
-  font-family: 'Bahnschrift';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 17px;
+    /* identical to box height */
+    /* text-decoration-line: underline; */
 
-
-  /* identical to box height */
-  /* text-decoration-line: underline; */
-
-  color: #929292;
+    color: #929292;
 }
 
 .content {
-  flex-grow: 1;
+    flex-grow: 1;
 }
 
 .account-body {
-  margin: 0;
+    margin: 0;
 
-  overflow: hidden;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .justify-content-space-evenly {
-  justify-content: space-evenly;
+    justify-content: space-evenly;
 }
 
 .justify-content-center {
-  justify-content: center;
+    justify-content: center;
 }
 
 .column {
-  flex-direction: column;
+    flex-direction: column;
 }
 
 .account {
-  width: 600px;
-  /* по макету 540px, поствил больше, визуальней так больше понравилось */
+    width: 600px;
+    /* по макету 540px, поствил больше, визуальней так больше понравилось */
 }
 
 .small-logo {
-  position: relative;
-  right: 164px;
-  top: -35px;
+    position: relative;
+    right: 164px;
+    top: -35px;
 
-  align-items: center;
-  /* identical to box height */
-  /* text-decoration-line: underline; */
-  display: flex;
-  flex-direction: column;
-  color: #929292;
-
+    align-items: center;
+    /* identical to box height */
+    /* text-decoration-line: underline; */
+    display: flex;
+    flex-direction: column;
+    color: #929292;
 }
