--- a/site/authorization/auth-styles.css
+++ b/site/authorization/auth-styles.css
@@ -1,5 +1,5 @@
 :root {
-    --form-witdh: 500px
+    --form-witdh: 500px;
 }
 
 body {
@@ -25,8 +25,7 @@ body {
     justify-content: center;
     width: var(--form-witdh);
 
-
-    background: #FFFFFF;
+    background: #ffffff;
     box-shadow: 3px -5px 10px rgba(0, 0, 0, 0.25);
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
@@ -43,7 +42,6 @@ body {
     flex-direction: column;
     align-items: center;
 }
-
 
 .login-tab,
 .registration-tab {
@@ -70,7 +68,6 @@ body {
     user-select: none;
     cursor: pointer;
     /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); */
-
 }
 
 .login-tab {
@@ -86,7 +83,7 @@ body {
     display: flex;
 }
 
-.ui-container>.active {
+.ui-container > .active {
     top: 0;
     z-index: 50;
     background-color: rgb(255, 255, 255);
@@ -101,7 +98,7 @@ body {
     /* left: calc(50% - 286px/2 + 0.08px); */
     /* top: 425px; */
 
-    background: #FFFFFF;
+    background: #ffffff;
     box-shadow: inset 2px 6px 30px rgba(0, 0, 0, 0.2);
     border-radius: 30px;
     border: none;
@@ -115,7 +112,6 @@ body {
     /* identical to box height */
     text-align: center;
     color: #3d3d3d;
-
 }
 
 input {
