--- a/site/shop/card-styles.css
+++ b/site/shop/card-styles.css
@@ -1,10 +1,8 @@
 :root {
     --card-hight: 210px;
     --img-container-size: calc(var(--card-hight));
-    --debug-bg-color: #FFFFFF;
+    --debug-bg-color: #ffffff;
 }
-
-
 
 .product-card {
     /* background-color: cadetblue;
@@ -23,12 +21,9 @@
     height: var(--card-hight);
     /* margin: 10px 20%; */
     margin: 0px 10px;
-    background: #FFFFFF;
+    background: #ffffff;
     box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.2);
     border-radius: 30px;
-
-
-
 }
 
 .img-container {
@@ -70,7 +65,6 @@
     background-color: var(--debug-bg-color);
     margin: 1px;
     border-radius: 5px;
-
 }
 
 .product-brand {
@@ -101,8 +95,6 @@
     background-color: var(--debug-bg-color);
     margin: 1px;
     border-radius: 5px; */
-
-
 }
 
 .product-name {
@@ -134,7 +126,6 @@
     background-color: var(--debug-bg-color);
     margin: 1px;
     border-radius: 5px; */
-
 }
 
 .product-description-container {
@@ -174,11 +165,9 @@
     background-color: var(--debug-bg-color);
     margin: 1px;
     border-radius: 5px; */
-
 }
 
 .buy-container {
-
     display: flex;
     align-items: center;
     justify-content: end;
