--- a/site/shop/shop-styles.css
+++ b/site/shop/shop-styles.css
@@ -55,7 +55,7 @@ body {
     align-items: end;
     flex-grow: 1;
     gap: 20px;
-    padding: 10px 20px 20vw 10px;
+    padding: 10px 20px 0px 10px;
     /* flex-grow: 1;
   flex-shrink: 5; */
 
