--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -1,5 +1,4 @@
-p {
-}
+p {}
 
 a {
     text-decoration: none;
@@ -423,4 +422,27 @@ nav {
     display: flex;
     flex-direction: column;
     color: #929292;
+}
+
+.vector-icon {
+    left: 0;
+    filter: drop-shadow(0px 0px 0px);
+    transition: top 0.05s, left 0.05s, filter 0.05s
+}
+
+.vector-icon:hover,
+.vector-icon:focus {
+    /* border: solid violet; */
+    position: relative;
+    left: -1px;
+    top: -1px;
+    filter: drop-shadow(2px 2px 1px black);
+}
+
+.vector-icon:active {
+    /* border: solid violet; */
+    position: relative;
+    left: 1px;
+    top: 1px;
+    filter: drop-shadow(0px 0px 2px grey);
 }
