--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -1,4 +1,5 @@
-p {}
+p {
+}
 
 a {
     text-decoration: none;
@@ -197,7 +198,6 @@ svg.logo:hover {
     text-align: center;
     /* vertical-align: middle; */
     cursor: pointer;
-
 }
 
 .small-button:hover {
@@ -222,7 +222,6 @@ svg.logo:hover {
     align-self: center;
     cursor: pointer;
     user-select: none;
-
 }
 
 .button.white .small-button-text {
