--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -3,6 +3,7 @@ p {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 h1 {
@@ -336,7 +337,7 @@ nav {
 }
 
 .user-info p {
-    color: #b4b4b4;
+    color: black;
     font-size: 22px;
     font-family: Bahnschrift;
     height: 36px;
@@ -356,11 +357,15 @@ nav {
     display: flex;
     gap: 30px;
     justify-content: center;
+    color: #000;
+    font-size: 17px;
+    font-family: Bahnschrift;
+    font-weight: 600;
+    margin-top: 20px;
 }
 
 .product-type-filter .active {
-    border-width: 1px;
-    border-style: solid;
+    color: #F33
 }
 
 .footer p {
