--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -451,3 +451,14 @@ nav {
     top: 1px;
     filter: drop-shadow(0px 0px 2px grey);
 }
+
+header {
+    margin: 0px;
+    padding-top: 10px;
+    width: 100vw;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 1000;
+}
