--- a/site/shop/shop-styles.css
+++ b/site/shop/shop-styles.css
@@ -1,11 +1,17 @@
+:root {
+    --header-height: 200px;
+}
+
 p {
     color: green;
 }
 
 .shop-main-navbar {
-    /* background-color: burlywood; */
     display: flex;
-    padding: 10px 25%;
+    max-width: 1150px;
+    width: 100vw;
+    min-width: 500px;
+
     justify-content: end;
     align-items: center;
     gap: 30px;
@@ -26,21 +32,17 @@ body {
     justify-content: center;
 }
 
-.shop-header {
-    padding-top: 10px;
-    background-color: white;
-    width: 100%;
-    position: fixed;
-    z-index: 100;
-}
-
 .shop-sidebar {
     display: flex;
     flex-direction: column;
     align-items: start;
     flex-grow: 1;
+    /* flex-shrink: 2; */
     padding: 10px 20px 20vw 10px;
     /* flex-shrink: 1; */
+    /* width: 20%; */
+    /* width: 150px */
+    width: 150px;
 }
 
 .product-brand-filter {
@@ -49,15 +51,17 @@ body {
 }
 
 .product-list-container {
-    /* background-color: beige; */
     display: flex;
     flex-direction: column;
     align-items: end;
     flex-grow: 1;
     gap: 20px;
     padding: 10px 20px 0px 10px;
-    /* flex-grow: 1;
-  flex-shrink: 5; */
+    width: 950px;
+}
 
-    /* justify-content: flex-start; */
+.title {
+    flex-grow: 1;
+    justify-self: center;
+    /* padding-left: 50px; */
 }
