--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -1,5 +1,4 @@
-p {
-}
+p {}
 
 a {
     text-decoration: none;
@@ -107,8 +106,8 @@ img.logo {
     font-family: 'Bahnschrift';
     font-style: normal;
     font-weight: 700;
-    font-size: 20px;
-    line-height: 48px;
+    /* font-size: 20px; */
+    /* line-height: 48px; */
     text-align: center;
     /* color: #FFFFFF; */
 }
