--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -1,4 +1,5 @@
-p {}
+p {
+}
 
 a {
     text-decoration: none;
@@ -521,7 +522,6 @@ header {
 .flex-grows-1 {
     flex-grow: 1;
 }
-
 
 .cart-side-bar,
 .shop-sidebar {
